# crowdstrike-logs

./: .dockerignore  .gitignore  config.example.yaml  main.py
collector/: alerts.py  api_client.py  audit_events.py  base.py  hosts.py
docs/superpowers/plans/: 2026-03-30-falcon-log-collector.md  2026-03-31-rust-rewrite.md
docs/superpowers/specs/: 2026-03-30-falcon-log-collector-design.md  2026-03-31-rust-rewrite-design.md
output/: base.py  dispatcher.py  http_post.py  json_file.py  relp.py  syslog_tcp.py
python/: main.py  requirements.txt
python/collector/: alerts.py  audit_events.py  auth.py  base.py
python/tests/: test_alerts.py  test_api_client.py  test_audit_events.py  test_auth.py  test_base_collector.py  test_config.py  test_integration.py  test_output_json_file.py  test_output_syslog_tcp.py  test_state_manager.py
python/utils/: logger.py  metrics.py
rust/falcon-collector-workspace/: .env.example  Cargo.toml  README.md
rust/falcon-collector-workspace/config/: default.toml
rust/falcon-collector-workspace/config/tenants/: FCT.toml  template.toml
rust/falcon-collector-workspace/crates/collector-core/: Cargo.toml
rust/falcon-collector-workspace/crates/collector-core/src/: collector.rs  error.rs  lib.rs
rust/falcon-collector-workspace/crates/config-watcher/: Cargo.toml
rust/falcon-collector-workspace/crates/config-watcher/src/: hot_reload.rs  lib.rs  schema.rs  watcher.rs
rust/falcon-collector-workspace/crates/falcon-client/: Cargo.toml
rust/falcon-collector-workspace/crates/falcon-client/src/: alerts.rs  auth.rs  lib.rs
rust/falcon-collector-workspace/crates/multi-tenant/: Cargo.toml
rust/falcon-collector-workspace/crates/multi-tenant/src/: lib.rs  registry.rs  tenant.rs
rust/falcon-collector-workspace/crates/pipeline/: Cargo.toml
rust/falcon-collector-workspace/crates/pipeline/src/: dedup.rs  lib.rs  metrics.rs  processor.rs  router.rs
rust/falcon-collector-workspace/crates/storage/: Cargo.toml
rust/falcon-collector-workspace/crates/storage/src/: lib.rs  writer.rs
rust/falcon-collector-workspace/tests/integration/: collector_tests.rs  tenant_tests.rs
state/: manager.py
tests/: test_alerts.py  test_api_client.py  test_audit_events.py  test_dispatcher.py  test_hosts.py  test_integration.py  test_metrics.py  test_output_http_post.py  test_output_json_file.py  test_output_syslog_tcp.py
utils/: config.py
