[workspace]
resolver = "2"
members = [
    "crates/collector-core",
    "crates/config-watcher",
    "crates/falcon-client",
    "crates/multi-tenant",
    "crates/pipeline",
    "crates/storage",
    "bin/falcon-collector",
]

[workspace.dependencies]
tokio              = { version = "1.37", features = ["full"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait        = "0.1"
chrono             = { version = "0.4", features = ["serde"] }
reqwest            = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml               = "0.8"
notify             = "6"
dotenvy            = "0.15"
dashmap            = "5"
uuid               = { version = "1", features = ["v4"] }
tokio-util         = "0.7"
futures            = "0.3"
anyhow             = "1"
