[package]
name    = "collector-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
async-trait = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
